test/fixtures/public/fail/semantic/simple_length.jmm
/*  REASON:
    Builtin "length" does not exist over simple types.
*/

class T {
    public static void main(String[] a) { 
        int i;
        i = 0.length;
    }
}
